RESOLVED FIXED11449
Type-to-select in unopened popups doesn't work with Hebrew
https://bugs.webkit.org/show_bug.cgi?id=11449
Summary Type-to-select in unopened popups doesn't work with Hebrew
mitz
Reported 2006-10-29 07:35:49 PST
The newly added "type to select" feature for focused yet un-popped popups doesn't work with typing Hebrew. Once you pop the menu, type-to-select works.
Attachments
Change isprint() to Unicode isPrintableChar() (3.72 KB, patch)
2007-01-11 10:05 PST, mitz
aroben: review+
mitz
Comment 1 2007-01-11 10:05:15 PST
Created attachment 12364 [details] Change isprint() to Unicode isPrintableChar() Includes change log and test.
Adam Roben (:aroben)
Comment 2 2007-01-11 10:19:34 PST
Comment on attachment 12364 [details] Change isprint() to Unicode isPrintableChar() Can you make the test use standard DOM events instead of eventSender.keyDown? r=me
mitz
Comment 3 2007-01-11 10:23:44 PST
(In reply to comment #2) > (From update of attachment 12364 [details] [edit]) > Can you make the test use standard DOM events instead of eventSender.keyDown? I'm afraid I can't, since charCode() looks at the PlatformKeyboardEvent.
Sam Weinig
Comment 4 2007-01-11 14:02:51 PST
Landed in r18779.
Note You need to log in before you can comment on or make changes to this bug.