LayoutTests:

Reviewed by Adam.

        - test for http://bugs.webkit.org/show_bug.cgi?id=11449
          Type-to-select in unopened popups doesn't work with Hebrew

        * fast/forms/select-type-ahead-non-latin-expected.txt: Added.
        * fast/forms/select-type-ahead-non-latin.html: Added.

WebCore:

        Reviewed by Adam.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11449
          Type-to-select in unopened popups doesn't work with Hebrew

        Test: fast/forms/select-type-ahead-non-latin.html

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::defaultEventHandler): Changed locale-specific
        isprint() condition to a Unicode isPrintableChar().



Canonical link: https://commits.webkit.org/15791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18779 268f45cc-cd09-0410-ab3c-d52691b4dbfc